# MocapApi

./: .gitmodules  README.md  install.bat
demo/u3d/: .gitignore
demo/u3d/u3d_mocap/Assets/: MainController.cs  PN_Avatar_Stickman01_v08_Heavy_FeetEnlarge_FeetGround.fbx
demo/u3d/u3d_mocap/Assets/Scenes/: SampleScene.unity
demo/u3d/u3d_mocap/ProjectSettings/: ProjectSettings.asset
demo/ue4/: .gitignore
demo/ue4/ue4_mocap/: ue4_mocap.uproject
demo/ue4/ue4_mocap/Config/: DefaultEngine.ini  DefaultGame.ini
demo/ue4/ue4_mocap/Content/Avatar/: M_Body.uasset  M_Body_Dark.uasset  M_FaceMask.uasset  M_Light.uasset  PN_Avatar_Stickman01_v08_Heavy_FeetEnlarge_FeetGround_PN_Logo.uasset  PN_Avatar_Stickman01_v08_Heavy_FeetEnlarge_FeetGround_SM_Head.uasset  PN_Avatar_Stickman01_v08_Heavy_FeetEnlarge_FeetGround_SM_Hips.uasset  PN_Avatar_Stickman01_v08_Heavy_FeetEnlarge_FeetGround_SM_LeftArm.uasset  (+50 more)
demo/ue4/ue4_mocap/Source/: ue4_mocap.Target.cs  ue4_mocapEditor.Target.cs
demo/ue4/ue4_mocap/Source/ue4_mocap/: AvatarActor.h  (+3 more)
demo/wtl/: CMakeLists.txt  avatar_sensor_module_data_view.hpp  bvh_motion_data_view.hpp  column_tree_ctrl.hpp  command_panel.hpp  debug.cpp  debug.h  event_panel.hpp  main_frame.h  main_frame.hpp  mocap_api_service.cpp  mocap_api_service.h  mocap_console.cpp  mocap_console.rc  mocap_panel.cpp  mocap_panel.h  resource.h  sensor_module_data_view.hpp  settings_panel.hpp  stdafx.h  w_a_conv.cpp  w_a_conv.h  wtl_mocap_api.cpp
doc/: MocapApi_en.md  MocapApi_zh.md
include/: MocapApi.cs  MocapApi.h  MocapCApi.h
lib/win32/x64/: MocapApi.exp  MocapApi.lib
(+5 files in other folders)
